--- a/HelpDesk.Migration/HelpDesk.Migration.csproj
+++ b/HelpDesk.Migration/HelpDesk.Migration.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Migrations\0006\AlterSettings1.cs" />
     <Compile Include="Migrations\0007\CreateDescriptionProblem.cs" />
     <Compile Include="Migrations\0009\CreateUserEventSubscribe.cs" />
+    <Compile Include="Migrations\0010\AlterObjectType2.cs" />
     <Compile Include="MigratorInstaller.cs" />
     <Compile Include="MigrationRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
