--- a/Services/HelpDesk.CalculateEventService/App.config
+++ b/Services/HelpDesk.CalculateEventService/App.config
@@ -36,5 +36,6 @@
     <add key="ServiceAddress" value="rabbitmq://localhost/HelpDesk" />
     <add key="RabbitMQUserName" value="guest" />
     <add key="RabbitMQPassword" value="guest" />
+    <add key="IntervalInMinutes" value="30" />
   </appSettings>
 </configuration>
