--- a/Services/HelpDesk.CalculateEventService/packages.config
+++ b/Services/HelpDesk.CalculateEventService/packages.config
@@ -2,8 +2,14 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
+  <package id="GreenPipes" version="1.0.9" targetFramework="net461" />
+  <package id="MassTransit" version="3.5.7" targetFramework="net461" />
+  <package id="MassTransit.RabbitMQ" version="3.5.7" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
+  <package id="NewId" version="3.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Quartz" version="2.6.1" targetFramework="net461" />
   <package id="Quartz.Unity" version="2.0.0" targetFramework="net461" />
+  <package id="RabbitMQ.Client" version="4.1.3" targetFramework="net461" />
   <package id="Unity" version="5.3.1" targetFramework="net461" />
 </packages>
