--- a/Presentation/HelpDesk.CabinetWebApp/HelpDesk.CabinetWebApp.csproj
+++ b/Presentation/HelpDesk.CabinetWebApp/HelpDesk.CabinetWebApp.csproj
@@ -527,6 +527,10 @@
       <Project>{c480a8c6-a30e-4519-b2ca-e48b62e53ca6}</Project>
       <Name>HelpDesk.Data.NHibernate</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\EventBus\HelpDesk.EventBus.Common\HelpDesk.EventBus.Common.csproj">
+      <Project>{55804dbf-6229-4f0c-81dc-88472a707e6a}</Project>
+      <Name>HelpDesk.EventBus.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\EventBus\HelpDesk.EventBus\HelpDesk.EventBus.csproj">
       <Project>{19CCD73D-255E-408D-AE8F-C2B2EDE51B43}</Project>
       <Name>HelpDesk.EventBus</Name>
@@ -534,6 +538,10 @@
     <ProjectReference Include="..\..\HelpDesk.Common\HelpDesk.Common.csproj">
       <Project>{40185033-2355-4e6c-9bc9-ecc2d8685133}</Project>
       <Name>HelpDesk.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HelpDesk.DataService.Common\HelpDesk.DataService.Common.csproj">
+      <Project>{c0fa0e99-27f2-49fe-84f3-d10e79c8636a}</Project>
+      <Name>HelpDesk.DataService.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\HelpDesk.DataService\HelpDesk.DataService.csproj">
       <Project>{b0535568-f554-4f6c-9520-b3195be0ec62}</Project>
