--- a/Services/HelpDesk.ConsumerEventSrvice/App.config
+++ b/Services/HelpDesk.ConsumerEventSrvice/App.config
@@ -39,9 +39,14 @@
     </assemblyBinding>
   </runtime>
   <system.net>
-    <mailSettings>
+    <!--<mailSettings>
       <smtp deliveryMethod="Network" from="mailer@mailer.ru">
         <network host="192.168.0.1" userName="mailer" password="mailer" port="25" enableSsl="false" />
+      </smtp>
+    </mailSettings>-->
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="qweqwe_098234@mail.ru">
+        <network host="smtp.mail.ru" userName="qweqwe_098234@mail.ru" password="098234qweqwe" port="587" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
