--- a/HelpDesk.Test/HelpDesk.Test.csproj
+++ b/HelpDesk.Test/HelpDesk.Test.csproj
@@ -112,6 +112,10 @@
       <Name>HelpDesk.Entity</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CalculateEventService\" />
+    <Folder Include="ConsumerEventService\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
