Настройка подписки в АРМ Исполнителя/Диспетчера

--- a/HelpDesk.DataService.Common/HelpDesk.DataService.Common.csproj
+++ b/HelpDesk.DataService.Common/HelpDesk.DataService.Common.csproj
@@ -93,7 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DTO\Resources\Resource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
