--- a/HelpDesk.DataService/HelpDesk.DataService.csproj
+++ b/HelpDesk.DataService/HelpDesk.DataService.csproj
@@ -104,6 +104,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="DTO\SimpleDTO.cs" />
+    <Compile Include="DTO\RawStatusRequestDTO.cs" />
     <Compile Include="DTO\StatusRequestDTO.cs" />
     <Compile Include="DTO\WareDTO.cs" />
     <Compile Include="DTO\WorkerUserDTO.cs" />
@@ -180,7 +181,7 @@
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Resource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
