--- a/Presentation/HelpDesk.WorkerWebApp/HelpDesk.WorkerWebApp.csproj
+++ b/Presentation/HelpDesk.WorkerWebApp/HelpDesk.WorkerWebApp.csproj
@@ -229,6 +229,7 @@
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\RequestFileUploadController.cs" />
     <Compile Include="Controllers\RequestController.cs" />
     <Compile Include="Controllers\EmployeeObjectController.cs" />
@@ -256,6 +257,7 @@
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\RequestEventParameter.cs" />
     <Compile Include="Models\RequestHistoryModel.cs" />
+    <Compile Include="Models\ChangeSubscribeRequestStateParameter.cs" />
     <Compile Include="Models\RequestObjectTOParameter.cs" />
     <Compile Include="Models\RequestObjectISParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -294,6 +296,7 @@
     <Content Include="App\Main\views\shared\fileDelete.js" />
     <Content Include="App\Main\views\request\fileUpload.js" />
     <Content Include="App\Main\views\request\request.js" />
+    <Content Include="App\Main\views\subscribe\subscribe.js" />
     <Content Include="App\Resources\jsResource.js" />
     <Content Include="App\Resources\JsResource.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
@@ -409,6 +412,7 @@
     <Content Include="App\Main\views\request\addTO.cshtml" />
     <Content Include="App\Main\views\employee\list.cshtml" />
     <Content Include="App\Main\views\employee\employee.cshtml" />
+    <Content Include="App\Main\views\subscribe\subscribe.cshtml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <None Include="Scripts\jquery-2.1.4-vsdoc.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
