--- a/Presentation/HelpDesk.CabinetWebApp/HelpDesk.CabinetWebApp.csproj
+++ b/Presentation/HelpDesk.CabinetWebApp/HelpDesk.CabinetWebApp.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\AngularTemplateController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Filters\CultureHelper.cs" />
     <Compile Include="Filters\RecaptchaFilter.cs" />
     <Compile Include="Filters\WebAPICultureAttribute.cs" />
@@ -247,6 +248,7 @@
     <Compile Include="Identity\ApplicationUser.cs" />
     <Compile Include="Identity\ApplicationUserManager.cs" />
     <Compile Include="Identity\UserStore.cs" />
+    <Compile Include="Models\ChangeSubscribeRequestStateParameter.cs" />
     <Compile Include="Models\FileUploadModel.cs" />
     <Compile Include="Models\ColumnHeaderModel.cs" />
     <Compile Include="Models\FilterGridDialogModel.cs" />
@@ -291,6 +293,7 @@
     <Content Include="App\Main\views\shared\fileDelete.js" />
     <Content Include="App\Main\views\request\fileUpload.js" />
     <Content Include="App\Main\views\request\request.js" />
+    <Content Include="App\Main\views\subscribe\subscribe.js" />
     <Content Include="App\Resources\jsResource.js" />
     <Content Include="App\Resources\JsResource.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
@@ -404,6 +407,7 @@
     <Content Include="App\Main\views\shared\fileUpload.cshtml" />
     <Content Include="App\Main\views\object\list.cshtml" />
     <Content Include="App\Main\views\requestHistory\events.cshtml" />
+    <Content Include="App\Main\views\subscribe\subscribe.cshtml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <None Include="Scripts\jquery-2.1.4-vsdoc.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
