--- a/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventService.csproj
+++ b/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventService.csproj
@@ -194,6 +194,7 @@
     <None Include="EmailTemplates\RequestAppEventCabinet.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="EmailTemplates\_Layout.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.config" />
   </ItemGroup>
