--- a/Services/HelpDesk.ConsumerEventSrvice/App.config
+++ b/Services/HelpDesk.ConsumerEventSrvice/App.config
@@ -11,6 +11,8 @@
     <add key="ServiceQueueName" value="HelpDesk" />
     <add key="RabbitMQUserName" value="guest" />
     <add key="RabbitMQPassword" value="guest" />
+    <add key="BaseCabinetUrl" value="http://localhost:4309/" />
+    <add key="BaseWorkerUrl" value="http://localhost:4308/" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
