--- a/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventService.csproj
+++ b/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventService.csproj
@@ -165,6 +165,7 @@
     <Compile Include="DTO\UserRequestAppEventSubscribeDTO.cs" />
     <Compile Include="EmailTemplateServices\RazorEmailTemplateService.cs" />
     <Compile Include="EmailTemplateServices\IEmailTemplateService.cs" />
+    <Compile Include="Helpers\RequestHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Consumers\RequestAppEventConsumer.cs" />
@@ -192,6 +193,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="EmailTemplates\UserRegisterAppEvent.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="EmailTemplates\_Request.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="EmailTemplates\RequestAppEventCabinet.cshtml">
