--- a/HelpDesk.DataService/HelpDesk.DataService.csproj
+++ b/HelpDesk.DataService/HelpDesk.DataService.csproj
@@ -99,6 +99,7 @@
     <Compile Include="DTO\RequestObjectDTO.cs" />
     <Compile Include="DTO\RequestObjectISDTO.cs" />
     <Compile Include="DTO\RequestObjectTODTO.cs" />
+    <Compile Include="DTO\RequestStateCountDTO.cs" />
     <Compile Include="DTO\Resources\Resource.Designer.cs">
       <DependentUpon>Resource.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -116,6 +117,7 @@
     <Compile Include="AccessWorkerUserService.cs" />
     <Compile Include="Query\ArchiveYearQuery.cs" />
     <Compile Include="Query\DescriptionProblemQuery.cs" />
+    <Compile Include="Query\RequestStateCountQuery.cs" />
     <Compile Include="Query\RequestQuery.cs" />
     <Compile Include="WorkerUserService.cs" />
     <Compile Include="Command\DeleteRequestFileCommand.cs" />
