--- a/HelpDesk.Common/HelpDesk.Common.csproj
+++ b/HelpDesk.Common/HelpDesk.Common.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -77,6 +78,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppConstants.cs" />
+    <Compile Include="Aspects\CacheAttribute.cs" />
+    <Compile Include="Aspects\CacheBehavior.cs" />
+    <Compile Include="Cache\ICache.cs" />
+    <Compile Include="Cache\InMemoryCache.cs" />
     <Compile Include="Helpers\EnumExtensions.cs" />
     <Compile Include="Helpers\ExpressionExtensions.cs" />
     <Compile Include="Helpers\ImageExtensions.cs" />
