--- a/Presentation/HelpDesk.WorkerWebApp/Web.config
+++ b/Presentation/HelpDesk.WorkerWebApp/Web.config
@@ -10,8 +10,26 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="enyim.com">
+      <section name="memcached" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
+    </sectionGroup>
   </configSections>
- 
+
+  <enyim.com>
+    <memcached protocol="Binary|Text">
+      <servers>
+        <!-- make sure you use the same ordering of nodes in every configuration you have -->
+        <add address="ip address" port="port number" />
+        <add address="ip address" port="port number" />
+      </servers>
+      <socketPool minPoolSize="integer" maxPoolSize="integer" connectionTimeout="timespan" deadTimeout="timespan" />
+      <locator type="fully qualified type name" factory="fully qualified type name" />
+      <transcoder type="fully qualified type name" factory="fully qualified type name" />
+      <keyTransformer type="fully qualified type name" factory="fully qualified type name" />
+      <performanceMonitor type="fully qualified type name" factory="fully qualified type name" />
+    </memcached>
+  </enyim.com>
+  
   <log4net debug="false">
     <!-- Define some output appenders -->
     <appender name="trace" type="log4net.Appender.TraceAppender, log4net">
