--- a/HelpDesk.Common/packages.config
+++ b/HelpDesk.Common/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.1" targetFramework="net461" />
+  <package id="EnyimMemcached" version="2.16.0" targetFramework="net461" />
   <package id="Unity" version="5.3.1" targetFramework="net461" />
   <package id="Unity.Abstractions" version="2.3.0" targetFramework="net461" />
   <package id="Unity.Interception" version="5.0.7" targetFramework="net461" />
