--- a/Presentation/HelpDesk.CabinetWebApp/Web.config
+++ b/Presentation/HelpDesk.CabinetWebApp/Web.config
@@ -41,6 +41,7 @@
     </root>
   </log4net>
   <appSettings>
+    <add key="redisConnectionString" value="127.0.0.1:6379" />
     <add key="log4net.Internal.Debug" value="true" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
