--- a/HelpDesk.Common/packages.config
+++ b/HelpDesk.Common/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="ServiceStack.Common" version="5.0.2" targetFramework="net461" />
   <package id="ServiceStack.Interfaces" version="5.0.2" targetFramework="net461" />
   <package id="ServiceStack.Redis" version="5.0.2" targetFramework="net461" />
