--- a/Presentation/HelpDesk.CabinetWebApp/Web.config
+++ b/Presentation/HelpDesk.CabinetWebApp/Web.config
@@ -41,7 +41,10 @@
     </root>
   </log4net>
   <appSettings>
-    <add key="redisConnectionString" value="127.0.0.1:6379" />
+    <add key="cache:RedisConnectionString" value="127.0.0.1:6379" />
+    <add key="cache:DefaultLocation" value="Redis" /><!--Redis|InMemory-->
+    <add key="cache:DefaultExpirationSeconds" value="1000" />
+    
     <add key="log4net.Internal.Debug" value="true" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
