--- a/Presentation/HelpDesk.CabinetWebApp/Web.config
+++ b/Presentation/HelpDesk.CabinetWebApp/Web.config
@@ -56,6 +56,8 @@
     <add key="ServiceAddress" value="rabbitmq://localhost/HelpDesk" />
     <add key="RabbitMQUserName" value="guest" />
     <add key="RabbitMQPassword" value="guest" />
+
+    <add key="OneSignal:AppId" value="82aa269d-93d9-4cc6-9112-fce271ff30c5" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
