Отправщик Push-сообщений в https://onesignal.com

--- a/Services/HelpDesk.ConsumerEventSrvice/App.config
+++ b/Services/HelpDesk.ConsumerEventSrvice/App.config
@@ -13,6 +13,8 @@
     <add key="RabbitMQPassword" value="guest" />
     <add key="BaseCabinetUrl" value="http://localhost:4309/" />
     <add key="BaseWorkerUrl" value="http://localhost:4308/" />
+
+    <add key="OneSignal:AppId" value="82aa269d-93d9-4cc6-9112-fce271ff30c5" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
