--- a/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventService.csproj
+++ b/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventService.csproj
@@ -177,6 +177,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Compile Include="Sender\WebPushlSender.cs" />
     <Compile Include="Sender\EmailSender.cs" />
     <Compile Include="Sender\ISender.cs" />
     <Compile Include="UnityConfig.cs" />
