--- a/Services/HelpDesk.ConsumerEventSrvice/packages.config
+++ b/Services/HelpDesk.ConsumerEventSrvice/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="GreenPipes" version="1.2.0" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MassTransit" version="3.5.7" targetFramework="net461" />
   <package id="MassTransit.Log4Net" version="3.5.7" targetFramework="net461" />
@@ -12,8 +14,11 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="NewId" version="3.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="NHibernate" version="5.0.0" targetFramework="net461" />
   <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net461" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
+  <package id="Remotion.Linq" version="2.1.2" targetFramework="net461" />
+  <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net461" />
   <package id="Topshelf" version="4.0.3" targetFramework="net461" />
   <package id="Topshelf.Log4Net" version="4.0.3" targetFramework="net461" />
   <package id="Unity" version="5.3.1" targetFramework="net461" />
